Bugfixing Extendedfields